Closed Bug 1783795 Opened 3 years ago Closed 2 years ago

Perma [tier 2] /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""

Categories

(Core :: JavaScript Engine, defect, P5)

defect

Tracking

()

RESOLVED FIXED
105 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox103 --- unaffected
firefox104 --- unaffected
firefox105 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: mohamedatef1698, NeedInfo)

References

(Regression)

Details

(Keywords: assertion, intermittent-failure, regression)

Attachments

(1 file)

Filed by: bszekely [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=386748216&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/O7_QsCNFRA6hn1VqJrCVdg/runs/0/artifacts/public/logs/live_backing.log


[task 2022-08-09T05:01:36.449Z] 05:01:36     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/for-of/wrapper-1.js | Success (code 0, args "--blinterp-eager") [0.2 s]
[task 2022-08-09T05:01:36.475Z] 05:01:36     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/bug-1751660.js | Success (code 0, args "") [0.2 s]
[task 2022-08-09T05:01:36.544Z] 05:01:36     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/bug-1751660.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.2 s]
[task 2022-08-09T05:01:36.545Z] 05:01:36     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/bug-1751660.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --more-compartments") [0.2 s]
[task 2022-08-09T05:01:36.661Z] 05:01:36     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/bug-1751660.js | Success (code 0, args "--baseline-eager") [0.2 s]
[task 2022-08-09T05:01:36.685Z] 05:01:36     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/bug-1751660.js | Success (code 0, args "--no-blinterp --no-baseline --no-ion --more-compartments") [0.2 s]
[task 2022-08-09T05:01:36.753Z] 05:01:36     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/bug-1751660.js | Success (code 0, args "--blinterp-eager") [0.2 s]
[task 2022-08-09T05:01:36.755Z] 05:01:36     INFO -  [CodeCoverage] Setting handlers for process 13126.
[task 2022-08-09T05:01:36.756Z] 05:01:36     INFO -  /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.757Z] 05:01:36     INFO -  Stack:
[task 2022-08-09T05:01:36.758Z] 05:01:36     INFO -    @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:36.759Z] 05:01:36     INFO -  Exit code: 3
[task 2022-08-09T05:01:36.759Z] 05:01:36     INFO -  FAIL - function/function-displayName-computed.js
[task 2022-08-09T05:01:36.761Z] 05:01:36  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/function/function-displayName-computed.js | [CodeCoverage] Setting handlers for process 13126. (code 3, args "") [0.2 s]
[task 2022-08-09T05:01:36.761Z] 05:01:36     INFO -  INFO exit-status     : 3
[task 2022-08-09T05:01:36.761Z] 05:01:36     INFO -  INFO timed-out       : False
[task 2022-08-09T05:01:36.762Z] 05:01:36     INFO -  INFO stderr         2> [CodeCoverage] Setting handlers for process 13126.
[task 2022-08-09T05:01:36.763Z] 05:01:36     INFO -  INFO stderr         2> /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.764Z] 05:01:36     INFO -  INFO stderr         2> Stack:
[task 2022-08-09T05:01:36.764Z] 05:01:36     INFO -  INFO stderr         2> @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:36.883Z] 05:01:36     INFO -  [CodeCoverage] Setting handlers for process 13137.
[task 2022-08-09T05:01:36.883Z] 05:01:36     INFO -  /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.884Z] 05:01:36     INFO -  Stack:
[task 2022-08-09T05:01:36.884Z] 05:01:36     INFO -    @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:36.884Z] 05:01:36     INFO -  Exit code: 3
[task 2022-08-09T05:01:36.885Z] 05:01:36     INFO -  FAIL - function/function-displayName-computed.js
[task 2022-08-09T05:01:36.885Z] 05:01:36  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/function/function-displayName-computed.js | [CodeCoverage] Setting handlers for process 13137. (code 3, args "--ion-eager --ion-offthread-compile=off --more-compartments") [0.2 s]
[task 2022-08-09T05:01:36.885Z] 05:01:36     INFO -  INFO exit-status     : 3
[task 2022-08-09T05:01:36.885Z] 05:01:36     INFO -  INFO timed-out       : False
[task 2022-08-09T05:01:36.885Z] 05:01:36     INFO -  INFO stderr         2> [CodeCoverage] Setting handlers for process 13137.
[task 2022-08-09T05:01:36.885Z] 05:01:36     INFO -  INFO stderr         2> /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.885Z] 05:01:36     INFO -  INFO stderr         2> Stack:
[task 2022-08-09T05:01:36.885Z] 05:01:36     INFO -  INFO stderr         2> @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:36.903Z] 05:01:36     INFO -  [CodeCoverage] Setting handlers for process 13143.
[task 2022-08-09T05:01:36.903Z] 05:01:36     INFO -  /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.903Z] 05:01:36     INFO -  Stack:
[task 2022-08-09T05:01:36.903Z] 05:01:36     INFO -    @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:36.904Z] 05:01:36     INFO -  Exit code: 3
[task 2022-08-09T05:01:36.904Z] 05:01:36     INFO -  FAIL - function/function-displayName-computed.js
[task 2022-08-09T05:01:36.904Z] 05:01:36  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/function/function-displayName-computed.js | [CodeCoverage] Setting handlers for process 13143. (code 3, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.2 s]
[task 2022-08-09T05:01:36.904Z] 05:01:36     INFO -  INFO exit-status     : 3
[task 2022-08-09T05:01:36.904Z] 05:01:36     INFO -  INFO timed-out       : False
[task 2022-08-09T05:01:36.904Z] 05:01:36     INFO -  INFO stderr         2> [CodeCoverage] Setting handlers for process 13143.
[task 2022-08-09T05:01:36.904Z] 05:01:36     INFO -  INFO stderr         2> /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.904Z] 05:01:36     INFO -  INFO stderr         2> Stack:
[task 2022-08-09T05:01:36.904Z] 05:01:36     INFO -  INFO stderr         2> @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:36.965Z] 05:01:36     INFO -  [CodeCoverage] Setting handlers for process 13146.
[task 2022-08-09T05:01:36.966Z] 05:01:36     INFO -  /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.966Z] 05:01:36     INFO -  Stack:
[task 2022-08-09T05:01:36.966Z] 05:01:36     INFO -    @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:36.967Z] 05:01:36     INFO -  Exit code: 3
[task 2022-08-09T05:01:36.967Z] 05:01:36     INFO -  FAIL - function/function-displayName-computed.js
[task 2022-08-09T05:01:36.967Z] 05:01:36  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/function/function-displayName-computed.js | [CodeCoverage] Setting handlers for process 13146. (code 3, args "--no-blinterp --no-baseline --no-ion --more-compartments") [0.2 s]
[task 2022-08-09T05:01:36.968Z] 05:01:36     INFO -  INFO exit-status     : 3
[task 2022-08-09T05:01:36.969Z] 05:01:36     INFO -  INFO timed-out       : False
[task 2022-08-09T05:01:36.969Z] 05:01:36     INFO -  INFO stderr         2> [CodeCoverage] Setting handlers for process 13146.
[task 2022-08-09T05:01:36.970Z] 05:01:36     INFO -  INFO stderr         2> /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.971Z] 05:01:36     INFO -  INFO stderr         2> Stack:
[task 2022-08-09T05:01:36.971Z] 05:01:36     INFO -  INFO stderr         2> @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:36.990Z] 05:01:36     INFO -  [CodeCoverage] Setting handlers for process 13145.
[task 2022-08-09T05:01:36.990Z] 05:01:36     INFO -  /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.990Z] 05:01:36     INFO -  Stack:
[task 2022-08-09T05:01:36.990Z] 05:01:36     INFO -    @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:36.990Z] 05:01:36     INFO -  Exit code: 3
[task 2022-08-09T05:01:36.990Z] 05:01:36     INFO -  FAIL - function/function-displayName-computed.js
[task 2022-08-09T05:01:36.991Z] 05:01:36  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/function/function-displayName-computed.js | [CodeCoverage] Setting handlers for process 13145. (code 3, args "--baseline-eager") [0.2 s]
[task 2022-08-09T05:01:36.991Z] 05:01:36     INFO -  INFO exit-status     : 3
[task 2022-08-09T05:01:36.992Z] 05:01:36     INFO -  INFO timed-out       : False
[task 2022-08-09T05:01:36.992Z] 05:01:36     INFO -  INFO stderr         2> [CodeCoverage] Setting handlers for process 13145.
[task 2022-08-09T05:01:36.992Z] 05:01:36     INFO -  INFO stderr         2> /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:36.993Z] 05:01:36     INFO -  INFO stderr         2> Stack:
[task 2022-08-09T05:01:36.993Z] 05:01:36     INFO -  INFO stderr         2> @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:37.099Z] 05:01:37     INFO -  [CodeCoverage] Setting handlers for process 13157.
[task 2022-08-09T05:01:37.099Z] 05:01:37     INFO -  /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:37.099Z] 05:01:37     INFO -  Stack:
[task 2022-08-09T05:01:37.099Z] 05:01:37     INFO -    @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:37.099Z] 05:01:37     INFO -  Exit code: 3
[task 2022-08-09T05:01:37.099Z] 05:01:37     INFO -  FAIL - function/function-displayName-computed.js
[task 2022-08-09T05:01:37.099Z] 05:01:37  WARNING -  TEST-UNEXPECTED-FAIL | tests/jit-test/jit-test/tests/function/function-displayName-computed.js | [CodeCoverage] Setting handlers for process 13157. (code 3, args "--blinterp-eager") [0.2 s]
[task 2022-08-09T05:01:37.100Z] 05:01:37     INFO -  INFO exit-status     : 3
[task 2022-08-09T05:01:37.100Z] 05:01:37     INFO -  INFO timed-out       : False
[task 2022-08-09T05:01:37.100Z] 05:01:37     INFO -  INFO stderr         2> [CodeCoverage] Setting handlers for process 13157.
[task 2022-08-09T05:01:37.100Z] 05:01:37     INFO -  INFO stderr         2> /builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9 Error: Assertion failed: got "obj/<", expected ""
[task 2022-08-09T05:01:37.100Z] 05:01:37     INFO -  INFO stderr         2> Stack:
[task 2022-08-09T05:01:37.100Z] 05:01:37     INFO -  INFO stderr         2> @/builds/worker/workspace/build/tests/jit-test/jit-test/tests/function/function-displayName-computed.js:18:9
[task 2022-08-09T05:01:37.129Z] 05:01:37     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/function-toString-discard-source-name.js | Success (code 0, args "") [0.2 s]
[task 2022-08-09T05:01:37.201Z] 05:01:37     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/function-toString-discard-source-name.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --more-compartments") [0.2 s]
[task 2022-08-09T05:01:37.225Z] 05:01:37     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/function-toString-discard-source-name.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.2 s]
[task 2022-08-09T05:01:37.317Z] 05:01:37     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/function-toString-discard-source-name.js | Success (code 0, args "--baseline-eager") [0.2 s]
[task 2022-08-09T05:01:37.349Z] 05:01:37     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/function-toString-discard-source-name.js | Success (code 0, args "--no-blinterp --no-baseline --no-ion --more-compartments") [0.2 s]
[task 2022-08-09T05:01:37.421Z] 05:01:37     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/function-toString-discard-source-name.js | Success (code 0, args "--blinterp-eager") [0.2 s]
[task 2022-08-09T05:01:37.441Z] 05:01:37     INFO -  TEST-PASS | tests/jit-test/jit-test/tests/function/function-toString-discard-source.js | Success (code 0, args "") [0.2 s]

Hi Mohamed, could you take a look at this bug? It appeared on central and it seems to be regressed by the latest changes made to bug 1321932.

Flags: needinfo?(mohamedatef1698)

Set release status flags based on info from the regressing bug 1321932

Flags: needinfo?(arai.unmht)
Assignee: nobody → mohamedatef1698
Status: NEW → ASSIGNED
Flags: needinfo?(arai.unmht)
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: