Bug 1783795: Fix errors caused by Bug 1321932. r=arai

Differential Revision: https://phabricator.services.mozilla.com/D154144