js/src/jit-test/tests/function/function-displayName-computed.js
@@ -1,3 +1,4 @@
+// |jit-test| skip-if: isLcovEnabled()
 // Guessed Atoms tests.
 // Test String literals
 var obj = {
